# EmStencil

./: .gitignore  AGENTS.md  EmStencil.py  LICENSE  README.md  convert_spreadsheet.py  emstencil.py  pyproject.toml  requirements.txt
assets/: EmStencil_Dark.icns
assets/MacOS/icon.icon/: icon.json
data/: .gitignore  ex_templates.xlsx  live_templates.xlsx  templates.sql
emstencil/: Database.py  Dataclasses.py  Exceptions.py  ExportTemplates.py  FieldEntryDialog.py  ImportTemplates.py  LogViewer.py  Logging.py  MainWindow.py  SelectFile.py  SelectionForm.py  TemplateEditorDialog.py  TemplateLoader.py  Ubiquitous.py  __init__.py  content_html.py  convert_spreadsheet.py  initialize.py  spreadsheet.py  templates.sql
tests/: __init__.py  conftest.py  test_content_html.py  test_database.py  test_database_integrity.py  test_email_template.py  test_field_entry_dialog.py  test_import_export_integration.py  test_spreadsheet_export.py  test_template_editor_dialog.py
